[Naive solution] Add new street furniture objects to data fusion pipeline (#42)
* Scrape street furniture object locations

* add street furniture fuser

* Toevoegen aan bgt_fuser

* Labels.py andere locatie

* Update README.md

Co-authored-by: daanbl <daan.bloembergen@gmail.com>

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -149,7 +149,7 @@
    "id": "opened-estate",
    "metadata": {},
    "source": [
-    "## Scrape pole-like objects from BGT and NDW"
+    "## Scrape pole-like object locations from BGT and NDW"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "outputs": [],
    "source": [
     "# Output file for the BGT fuser.\n",
-    "bgt_data_file = '../datasets/bgt/custom_points_demo.csv'\n",
+    "bgt_data_file = '../datasets/bgt/custom_pole_points_demo.csv'\n",
     "csv_headers = ['Type', 'X', 'Y']\n",
     "\n",
     "# BGT layers (without the traffic sign layer)\n",
@@ -193,6 +193,51 @@
     "\n",
     "# Write the csv\n",
     "csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "charming-danger",
+   "metadata": {},
+   "source": [
+    "## Scrape street furniture object locations from BGT\n",
+    "Please note, <x,y> coordinates for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are not available for the example point cloud tiles. Therefore, manually generated data is provided in this repository for demonstration purposes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "modified-productivity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output file for the BGT fuser.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
+    "csv_headers = ['Type', 'X', 'Y']\n",
+    "\n",
+    "# BGT layers\n",
+    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank', 'BGTPLUS_BAK_afval_apart_plaats']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "returning-alexandria",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape street furniture data from BGT and parse the json.\n",
+    "bgt_point_objects_csv = []\n",
+    "for layer in bgt_layers:\n",
+    "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
+    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
+    "    \n",
+    "    # Parse the downloaded json response.\n",
+    "    parsed_content = ams_bgt_scraper.parse_points_bgtplus(json_content)\n",
+    "    bgt_point_objects_csv += parsed_content\n",
+    "\n",
+    "# Write the csv (uncomment when data is available)\n",
+    "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   }
  ],
