--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -25,12 +25,20 @@
     "import set_path\n",
     "\n",
     "# Import modules.\n",
+    "import logging\n",
+    "\n",
     "import src.fusion as fusion\n",
     "from src.pipeline import Pipeline\n",
+    "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels\n",
+    "\n",
+    "# INFO messages will be printed to console.\n",
+    "log_utils.reset_logger()\n",
+    "log_utils.add_console_logger(level=logging.DEBUG)"
    ]
   },
   {
@@ -159,6 +167,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc1a861f-a2fb-47e0-8d7e-6f7b56b10607",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Region Growing\n",
+    "\n",
+    "We use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly. For details and other options see notebook [Region growing](Region%20growing.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf7d638-e3d5-42f2-b2fd-4fbc1c7b2721",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# We do this separately for the top and bottom since the best settings for each might differ.\n",
+    "building_top = {'bottom': 12., 'grid_size': 0.1, 'threshold': 0.5}\n",
+    "building_bottom = {'bottom': 0.5, 'top': 12., 'grid_size': 0.05, 'threshold': 0.5}\n",
+    "\n",
+    "building_grower = growing.LayerLCC(Labels.BUILDING, npz_reader, \n",
+    "                                   params=[building_top, building_bottom])\n",
+    "\n",
+    "geotiff_building_grower = growing.LayerLCC(Labels.BUILDING, geotiff_reader, \n",
+    "                                           params=[building_top, building_bottom])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "de4fc39f-fd03-47a9-9269-c88706abd5f3",
    "metadata": {},
    "source": [
@@ -175,7 +215,7 @@
    "outputs": [],
    "source": [
     "# Set-up full AHN pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
@@ -187,7 +227,7 @@
    "outputs": [],
    "source": [
     "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
-    "process_sequence = (geotiff_ground_fuser, bgt_building_fuser)\n",
+    "process_sequence = (geotiff_ground_fuser, bgt_building_fuser, geotiff_building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
@@ -199,7 +239,7 @@
    "outputs": [],
    "source": [
     "# BEST OPTION: Set-up AHN + BGT pipeline.\n",
-    "process_sequence = (npz_ground_fuser, bgt_ahn_building_fuser)\n",
+    "process_sequence = (npz_ground_fuser, bgt_ahn_building_fuser, building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
@@ -227,6 +267,14 @@
     "# Process the file.\n",
     "pipeline.process_file(in_file, out_file=out_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649c759e-d645-4c34-959a-a89c395668a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
