--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -22,14 +22,20 @@
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
+    "import logging\n",
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels\n",
+    "\n",
+    "# INFO messages will be printed to console.\n",
+    "log_utils.reset_logger()\n",
+    "log_utils.add_console_logger(level=logging.DEBUG)"
    ]
   },
   {
@@ -51,8 +57,11 @@
     "# Select the point cloud file to process.\n",
     "tilecode = '2386_9702'\n",
     "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "\n",
     "# The corresponding BGT data file.\n",
-    "bgt_data_file = '../datasets/bgt/custom_points_demo.csv'\n",
+    "bgt_data_file = '../datasets/bgt/custom_pole_points_demo.csv'\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -67,8 +76,7 @@
    "outputs": [],
    "source": [
     "# Load a (partially labelled) LAS file, e.g. from the previous step.\n",
-    "las_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
-    "las = las_utils.read_las(las_file)\n",
+    "las = las_utils.read_las(in_file)\n",
     "\n",
     "labels = las.label\n",
     "points = np.vstack((las.x, las.y, las.z)).T"
@@ -112,9 +120,9 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
@@ -193,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Process the point cloud.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN)\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR)\n",
     "process_sequence = (light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
@@ -219,7 +227,6 @@
    "outputs": [],
    "source": [
     "# Save the result (this will overwrite the LAS file.)\n",
-    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "las_utils.label_and_save_las(las, labels, out_file)"
    ]
   },
