--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -15,8 +15,8 @@
     "import time\n",
     "import logging\n",
     "\n",
-    "import src.utils.log_utils as log_utils\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.fusion as fusion\n",
@@ -33,7 +33,7 @@
    "id": "bdbe7291",
    "metadata": {},
    "source": [
-    "## Car fuser based on cluster dimensions and BGT information\n",
+    "## Street furniture fuser based on cluster dimensions and BGT reference data\n",
     "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
    ]
   },
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The already labelled ground and building points must be removed.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING)"
+    "# The already labelled points must be removed.\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN, Labels.CAR, Labels.NOISE)\n"
    ]
   },
   {
@@ -62,8 +62,7 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
-    "pc_data_folder = '../datasets/pointcloud/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -79,12 +78,13 @@
    },
    "outputs": [],
    "source": [
-    "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
-    "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
+    "# Object type-specific parameters.\n",
+    "rubbish_bin_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 1.5, 'min_length': 0.3, 'max_length': 1.5}\n",
+    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
     "\n",
-    "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
-    "                            min_component_size=5000, params=car_params)"
+    "# Create fusers for BGT point data.\n",
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=rubbish_bin_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# Set-up the order in how we want to label.\n",
-    "process_sequence = (car_fuser,)\n",
+    "process_sequence = (rubbish_bin_fuser, city_bench_fuser)\n",
     "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
@@ -138,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
