--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -33,7 +33,7 @@
     "import src.utils.plot_utils as plot_utils\n",
     "import src.utils.log_utils as log_utils\n",
     "from src.pipeline import Pipeline\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels"
    ]
   },
   {
@@ -69,7 +69,9 @@
     "# File with BGT building polygons.\n",
     "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
     "# File with <x,y> coordinates of pole-like objects.\n",
-    "bgt_point_file = '../datasets/bgt/custom_points_demo.csv'\n",
+    "bgt_pole_file = '../datasets/bgt/custom_pole_points_demo.csv'\n",
+    "# File with <x,y> coordinates of street furniture objects.\n",
+    "bgt_street_furniture_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
     "\n",
     "# Some methods use AHN elevation data to determine the height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
@@ -142,12 +144,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dimension ranges of passenger cars.\n",
+    "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
+    "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file,\n",
-    "                            grid_size=0.05, min_component_size=5000,\n",
-    "                            min_height=1.2, max_height=2.4,\n",
-    "                            min_width=1.4, max_width=2.4,\n",
-    "                            min_length=3.0, max_length=6.0)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file, grid_size=0.05,\n",
+    "                            min_component_size=5000, params=car_params)"
    ]
   },
   {
@@ -157,7 +159,7 @@
    "source": [
     "### Pole-like objects\n",
     "\n",
-    "Finally we look for 'pole-like' objects such as trees, street lights and traffic signs.\n",
+    "Next, we look for 'pole-like' objects such as trees, street lights and traffic signs.\n",
     "\n",
     "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
    ]
@@ -175,9 +177,37 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=sign_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2282f973",
+   "metadata": {},
+   "source": [
+    "### Street furniture\n",
+    "\n",
+    "Finally we label street furniture objects by matching clusters above the ground with reference BGT points.\n",
+    "\n",
+    "For details and more options, see notebook [5. Street furniture](5.%20Street%20furniture.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e63a9ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Object type-specific parameters.\n",
+    "rubbish_bin_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 1.5, 'min_length': 0.3, 'max_length': 1.5}\n",
+    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
+    "\n",
+    "# Create fusers for BGT point data.\n",
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=rubbish_bin_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=city_bench_params)"
    ]
   },
   {
@@ -188,7 +218,7 @@
     "---\n",
     "## Region Growing\n",
     "\n",
-    "We use region growing based on labelling of connected components. For details and other options see notebook [5. Region growing](5.%20Region%20growing.ipynb).\n",
+    "We use region growing based on labelling of connected components. For details and other options see notebook [Region growing](Region%20growing.ipynb).\n",
     "\n",
     "### Buildings\n",
     "\n",
@@ -264,8 +294,9 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser, tree_fuser,\n",
-    "                    light_fuser, sign_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
+    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
+    "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
+    "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
    ]
   },
@@ -367,9 +398,10 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "plot_utils.plot_bgt_and_cloudslice(tile_code, out_file, ahn_reader, \n",
-    "                                   building_file=bgt_building_file, road_file=bgt_road_file, \n",
-    "                                   point_file=bgt_point_file, plane_height=1., hide_noise=True)"
+    "plot_utils.plot_bgt_and_cloudslice(tile_code, out_file, ahn_reader, building_file=bgt_building_file,\n",
+    "                                   road_file=bgt_road_file, pole_file=bgt_pole_file,\n",
+    "                                   street_furniture_file=bgt_street_furniture_file,\n",
+    "                                   plane_height=1., hide_noise=True)"
    ]
   },
   {
