--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -107,6 +107,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "embedded-anthropology",
+   "metadata": {},
+   "source": [
+    "### Separate ground into road and sidewalk\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fancy-legislation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building fuser using BGT building footprint data.\n",
+    "road_sidewalk_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+   ]
+  {
+   "cell_type": "markdown",
    "id": "8056c332",
    "metadata": {},
    "source": [
@@ -294,7 +313,6 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
     "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
     "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
