--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -120,7 +120,8 @@
     "# Road and parking spots layers in BGT\n",
     "bgt_layers = ['BGT_WGL_rijbaan_lokale_weg', 'BGT_WGL_parkeervlak',\n",
     "              'BGT_WGL_rijbaan_autoweg', 'BGT_WGL_rijbaan_autosnelweg',\n",
-    "              'BGT_WGL_rijbaan_regionale_weg', 'BGT_WGL_ov-baan']"
+    "              'BGT_WGL_rijbaan_regionale_weg', 'BGT_WGL_ov-baan',\n",
+    "              'BGT_WGL_fietspad']"
    ]
   },
   {
