Add bridge fuser code

--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -61,6 +61,7 @@
     "# Data folder and file for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "\n",
     "# Create the reader for .npz data.\n",
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
@@ -75,7 +76,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff3cc8fa-6017-4e03-a005-2879a48bf906",
+   "id": "concerned-talent",
+   "metadata": {},
+   "source": [
+    "## [Optional] Seperate ground points into road or sidewalk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "developed-bradford",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building fuser using BGT building footprint data.\n",
+    "road_sidewalk_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "seeing-stake",
    "metadata": {},
    "source": [
     "### [Alternative] Ground fuser using GeoTIFF data\n",
@@ -244,6 +264,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "residential-amsterdam",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTIONAL: Set-up AHN + BGT pipeline with ground separation.\n",
+    "process_sequence = (npz_ground_fuser, road_sidewalk_fuser, bgt_ahn_building_fuser, building_grower)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "69b5febb",
    "metadata": {},
@@ -259,10 +291,66 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "tilecode = '2386_9702'\n",
+    "tilecode = '2629_9597'\n",
     "\n",
     "in_file = '../datasets/pointcloud/filtered_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "\n",
+    "# Process the file.\n",
+    "pipeline.process_file(in_file, out_file=out_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "welsh-columbus",
+   "metadata": {},
+   "source": [
+    "## Bridge fuser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adaptive-feeding",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The already labelled ground and building points must be removed.\n",
+    "exclude_labels = (Labels.ROAD, Labels.BUILDING, Labels.GROUND)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "virgin-viking",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building fuser using BGT building footprint data.\n",
+    "bridge_fuser = fusion.BridgeFuser(Labels.BRIDGE, npz_reader, bgt_file=bgt_data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unlike-retirement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up the order in how we want to label.\n",
+    "process_sequence = (bridge_fuser,)\n",
+    "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "military-implementation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_bridge_' + tilecode + '.laz'\n",
     "\n",
     "# Process the file.\n",
     "pipeline.process_file(in_file, out_file=out_file)"
