Update 0. Complete solution.ipynb

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -124,6 +124,7 @@
     "# Building fuser using BGT building footprint data.\n",
     "road_sidewalk_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
    ]
+  },
   {
    "cell_type": "markdown",
    "id": "8056c332",
@@ -313,6 +314,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
+    "process_sequence = (npz_ground_fuser, road_sidewalk_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
     "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
     "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
