Add road in pipeline sequence

--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# The already labelled ground and building points must be removed.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING)"
+    "exclude_labels = (Labels.GROUND, Labels.ROAD, Labels.BUILDING)"
    ]
   },
   {
