--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "# Process the point cloud.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR)\n",
+    "exclude_labels = (Labels.GROUND, Labels.ROAD, Labels.BUILDING, Labels.CAR)\n",
     "process_sequence = (tree_fuser, light_fuser, sign_fuser)\n",
     "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
