--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -45,7 +45,8 @@
    "outputs": [],
    "source": [
     "# The already labelled points must be removed.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN, Labels.CAR, Labels.NOISE)\n"
+    "exclude_labels = (Labels.GROUND, Labels.ROAD, Labels.BUILDING, Labels.TREE, Labels.STREET_LIGHT,\n",
+    "                  Labels.TRAFFIC_SIGN, Labels.CAR, Labels.NOISE)"
    ]
   },
   {
