Grotere image betere kwaliteit

--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -129,7 +129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Optional] Seperate ground points into road or sidewalk"
+    "### [Optional] Seperate ground points into road or sidewalk\n",
+    "TODO add text"
    ]
   },
   {
