--- a/notebooks/Visualisations.ipynb
+++ b/notebooks/Visualisations.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%matplotlib widget\n",
+    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import set_path\n",
