--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -110,7 +110,7 @@
    "id": "embedded-anthropology",
    "metadata": {},
    "source": [
-    "### Separate ground into road and sidewalk\n",
+    "### Road segments\n",
     "TODO"
    ]
   },
