--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "source": [
     "### Road segments\n",
-    "TODO"
+    "Ground points that fall within certain road parts are labelled as such."
    ]
   },
   {
