--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "### [Optional] Road segments\n",
-    "Label already labelled ground points as road points."
+    "Ground points that fall within certain road parts are labelled as such."
    ]
   },
   {
