--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Road fuser using BGT road polygon data.\n",
-    "road_sidewalk_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "# OPTIONAL: Set-up AHN + BGT pipeline with ground separation.\n",
-    "process_sequence = (npz_ground_fuser, road_sidewalk_fuser, bgt_ahn_building_fuser, building_grower)\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, bgt_ahn_building_fuser, building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
