--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "# Road fuser using BGT road polygon data.\n",
-    "road_sidewalk_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, road_sidewalk_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
     "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
     "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
