Feature - Label road segments (#44)
* Separate ground

* Update 2. Ground and Buildings.ipynb

* Update 0. Complete solution.ipynb

* Refactor ahn_preprocessing.py

* Fix shapely deprecation warnings.

* Small fixes in visualisations.

* Updated visuals.

* Re-structured BGT fusers.

* Update cc_color_scale.xml

* Feedback

Co-authored-by: daanbl <daan.bloembergen@gmail.com>

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -107,6 +107,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "embedded-anthropology",
+   "metadata": {},
+   "source": [
+    "### Road segments\n",
+    "Ground points that fall within certain road parts are labelled as such."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fancy-legislation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Road fuser using BGT road polygon data.\n",
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8056c332",
    "metadata": {},
    "source": [
@@ -294,7 +314,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
     "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
     "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
@@ -401,7 +421,7 @@
     "plot_utils.plot_bgt_and_cloudslice(tile_code, out_file, ahn_reader, building_file=bgt_building_file,\n",
     "                                   road_file=bgt_road_file, pole_file=bgt_pole_file,\n",
     "                                   street_furniture_file=bgt_street_furniture_file,\n",
-    "                                   plane_height=1., hide_noise=True)"
+    "                                   plane_height=.75, hide_noise=True)"
    ]
   },
   {
