--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -60,7 +60,8 @@
    "source": [
     "# Data folder and file for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bgt_building_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
+    "bgt_road_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
     "\n",
     "# Create the reader for .npz data.\n",
     "npz_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
@@ -126,7 +127,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-methodology",
+   "metadata": {},
+   "source": [
+    "### [Optional] Road segments\n",
+    "Ground points that fall within certain road parts are labelled as such."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Road fuser using BGT road polygon data.\n",
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### [Alternative] Building fuser using BGT data\n",
@@ -141,7 +159,7 @@
    "outputs": [],
    "source": [
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_data_file, building_offset=1)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_building_file, building_offset=1)"
    ]
   },
   {
@@ -161,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Note: this only works with .npz (pre-processed) AHN data, since GeoTIFF does not contain building data.\n",
-    "bgt_ahn_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_data_file, \n",
+    "bgt_ahn_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_file=bgt_building_file, \n",
     "                                                 building_offset=0.25, ahn_reader=npz_reader)"
    ]
   },
@@ -234,12 +252,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26876fa2-76b5-4c76-94e0-b1aee7de8873",
    "metadata": {},
    "outputs": [],
    "source": [
     "# BEST OPTION: Set-up AHN + BGT pipeline.\n",
     "process_sequence = (npz_ground_fuser, bgt_ahn_building_fuser, building_grower)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTIONAL: Set-up AHN + BGT pipeline with ground separation.\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, bgt_ahn_building_fuser, building_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, caching=False)"
    ]
   },
