--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -30,6 +30,7 @@
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.bgt_utils as bgt_utils\n",
     "import src.utils.plot_utils as plot_utils\n",
     "import src.utils.log_utils as log_utils\n",
     "from src.pipeline import Pipeline\n",
@@ -73,8 +74,14 @@
     "# File with <x,y> coordinates of street furniture objects.\n",
     "bgt_street_furniture_file = '../datasets/bgt/bgt_street_furniture_demo.csv'\n",
     "\n",
-    "# Some methods use AHN elevation data to determine the height above ground.\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
+    "# Initialize AHN reader for elevation data.\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
+    "# Initialize BGT readers for BGT polygon and point data.\n",
+    "bgt_building_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_building_file)\n",
+    "bgt_road_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_road_file)\n",
+    "bgt_pole_reader = bgt_utils.BGTPointReader(bgt_file=bgt_pole_file)\n",
+    "bgt_street_furniture_reader = bgt_utils.BGTPointReader(bgt_file=bgt_street_furniture_file)"
    ]
   },
   {
@@ -102,7 +109,7 @@
     "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, ahn_reader,\n",
     "                                   target='ground', epsilon=0.2)\n",
     "# Building fuser using BGT building footprint data and AHN data for the maximum height, if available.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=0.25, bgt_file=bgt_building_file, ahn_reader=ahn_reader)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_reader=bgt_building_reader, offset=0.25, ahn_reader=ahn_reader)"
    ]
   },
   {
@@ -122,7 +129,7 @@
    "outputs": [],
    "source": [
     "# Road fuser using BGT road polygon data.\n",
-    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_file=bgt_road_file)"
+    "road_part_fuser = fusion.BGTRoadFuser(Labels.ROAD, bgt_reader=bgt_road_reader)"
    ]
   },
   {
@@ -168,8 +175,8 @@
     "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file, grid_size=0.05,\n",
-    "                            min_component_size=5000, params=car_params)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_reader=bgt_road_reader, exclude_types=[\"fietspad\"],\n",
+    "                            grid_size=0.05, min_component_size=5000, params=car_params)"
    ]
   },
   {
@@ -197,9 +204,9 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_pole_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_reader=bgt_pole_reader, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
@@ -226,8 +233,10 @@
     "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=rubbish_bin_params)\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=city_bench_params)"
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', bgt_reader=bgt_street_furniture_reader,\n",
+    "                                                   ahn_reader=ahn_reader, params=rubbish_bin_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', bgt_reader=bgt_street_furniture_reader,\n",
+    "                                                  ahn_reader=ahn_reader, params=city_bench_params)"
    ]
   },
   {
